--- a/app/views/bugs/_form.html.erb
+++ b/app/views/bugs/_form.html.erb
@@ -1,22 +1,21 @@
 <%= form_for @bug, :html => { :class => 'form-horizontal' } do |f| %>
+
+ <%= f.hidden_field :user_id,:value=>current_user.id %>
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
     </div>
   </div>
+
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :description, :class => 'text_area' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :user_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :user_id, :class => 'number_field' %>
-    </div>
-  </div>
+  
+  
   <div class="control-group">
     <%= f.label :resolve, :class => 'control-label' %>
     <div class="controls">
