--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -1,5 +1,27 @@
 
 
+
+<div class="btn-group">
+  <a class="btn btn-primary" href="#"><i class="icon-user icon-white"></i> User</a>
+  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+  <ul class="dropdown-menu">
+    <li><a href="#"><i class="icon-pencil"></i> Edit</a></li>
+    <li><a href="#"><i class="icon-trash"></i> Delete</a></li>
+    <li><a href="<%=destroy_user_session_path%>" data-method="delete"><i class="icon-ban-circle"></i>Log Out</a></li>
+    <li class="divider"></li>
+    <li><a href="#"><i class="i"></i> Make admin</a></li>
+  </ul>
+</div>
+
+
+
+
+
+
+
+
+
+
 <%= link_to "Logout", destroy_user_session_path , :method => :delete%>
 <%- model_class = Bug -%>
 <div class="page-header">
