--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,57 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<h3 style="margin-left:200px;" class="text-info">Sign Up</h3>
+
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :fname %><br />
-  <%= f.text_field :fname, :autofocus => true %></div>
 
-  <div><%= f.label :lname %><br />
-  <%= f.text_field :lname, :autofocus => true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= "Designation" %><br/><br/> 
-       <%= f.select(:designation, options_for_select([["Admin","Admin"],["Employee","Employee"]]))  %>
+  <div class="control-group ">
+    <%= f.label :fname , :class => 'control-label'%>
+    <div class="controls">
+      <%= f.text_field :fname, :autofocus => true %>
+    </div>
   </div>
-<br/><br/> 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="control-group ">
+    <%= f.label :lname , :class => 'control-label'%>
+    <div class="controls">
+      <%= f.text_field :lname, :autofocus => true %>
+    </div>
+  </div>  
+
+  <div class="control-group ">
+    <%= f.label :email, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.email_field :email, :autofocus => true %>
+    </div>  
+</div>
+
+  <div class="control-group ">
+    <%= f.label :password , :class => 'control-label'%>
+    <div class="controls">
+      <%= f.password_field :password %>
+    </div>
+  </div>
+
+  <div class="control-group ">
+    <%= f.label :password_confirmation , :class => 'control-label'%>
+    <div class="controls">
+      <%= f.password_field :password_confirmation %>
+    </div>
+  </div>
+
+  <div class="control-group ">
+    <%= f.label :designation , :class => 'control-label' %>
+    <div class="controls"> 
+       <%= f.select(:designation, options_for_select([["Admin","Admin"],["Employee","Employee"]]))  %>
+    </div>
+  </div>
+
+<br/> 
+  <div class="control-group "><div class="controls"><%= f.submit "Sign up" %></div></div>
+<% end %>
+<br/>
+
+<div style="margin-left:170px;">
+  <%= render "devise/shared/links" %>
+</div>
