--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,24 +4,29 @@
 <!-- <li class="nav-top-item"><%#= link_to "Sign up", new_user_registration_path %></li> -->
 <!-- <li class="nav-top-item"><%#= link_to "Log in", new_user_session_path %></li> -->
 <%# end %>
+<br/>
+<br/>
+<br/>
+<br/>
+<div style="margin-left:400px;">
+  <% if user_signed_in? %>
+    <li class="text-info">
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete ,:class=>"btn btn-info") %>        
+    </li>
+  <% else %>
+    <li class="text-info"> 
+    <%= link_to('Login', new_user_session_path,:class=>"btn btn-info")  %>  
+    </li>
+  <% end %>
+  <br />
 
-
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
-<% end %>
-
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Edit registration', edit_user_registration_path) %>
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Register', new_user_registration_path)  %>
-  </li>
-<% end %>
+  <% if user_signed_in? %>
+    <li class="text-info">
+    <%= link_to('Edit registration', edit_user_registration_path ,:class=>"btn btn-info") %>
+    </li>
+  <% else %>
+    <li class="text-info">
+    <%= link_to('Register', new_user_registration_path ,:class=>"btn btn-info")  %>
+    </li>
+  <% end %>
+</div>
